<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wakebyte.aerocharger.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_charger"
                        android:id="@+id/switch_enable"
                        android:layout_gravity="right"/>

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lock_settings"
                        android:id="@+id/switch_lock"
                        android:layout_gravity="right" />
                </LinearLayout>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="0.5" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apply"
                    android:id="@+id/button_apply"
                    android:minWidth="75dp" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:minWidth="5px" />

            </LinearLayout>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:id="@+id/progress_charge"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/charge_settings"
                android:id="@+id/textView2" />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight="0.25" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="0.25" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/num_volts" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/decimal"
                    android:id="@+id/textView"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical|left" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/num_volts_tenths" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/volt_label"
                    android:id="@+id/textView3"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical|left" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="0.5" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/num_amps" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/decimal"
                    android:id="@+id/textView6"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_gravity="center_vertical|left" />

                <NumberPicker
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/num_amps_tenths" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/amp_label"
                    android:id="@+id/textView4"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_gravity="center_vertical|left" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="0.05" />

            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight="0.35"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/power"
                    android:id="@+id/textView5"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/power_value"
                    android:id="@+id/text_power_value"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/percent"
                    android:id="@+id/textView7"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" />

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                android:layout_weight="0.05" />

            <SeekBar
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/seek_power"
                android:layout_gravity="center_horizontal"
                android:max="100"
                android:progress="50" />

            <Space
                android:layout_width="20px"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:minHeight="75dp" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charge_button"
                android:id="@+id/button_charge"
                android:layout_gravity="center_horizontal"
                android:minHeight="60dp"
                android:minWidth="200dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
